--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 cache: pip
 env:
     matrix:
+        - DJANGO="Django<1.11,>=1.10"
         - DJANGO="Django<1.10,>=1.9"
         - DJANGO="Django<1.9,>=1.8"
         - DJANGO="Django<1.8,>=1.7"
